--- a/sub/partnership/partnership.html
+++ b/sub/partnership/partnership.html
@@ -108,10 +108,10 @@
                             </h2>
                         </div>
                         <div class="partnership_info_wrap">
-                            <h3><span>01</span>국내 최다 골퍼 회원수 보유</h3>
-                            <div><img src="../../images/sub/img_partnership_info_1.png" alt="" /></div>
-                            <h3><span>02</span>국내 최대 스크린골프 운영사</h3>
-                            <div><img src="../../images/sub/img_partnership_info_2.png" alt="" /></div>
+                            <h3>국내 최다 골퍼 회원수 보유</h3>
+                            <div><img src="../../images/sub/img_partnership_info_1.png?ver=2" alt="" /></div>
+                            <h3>국내 최대 스크린골프 운영사</h3>
+                            <div><img src="../../images/sub/img_partnership_info_2.png?ver=2" alt="" /></div>
                         </div>
                         <style>
                         .qna{
@@ -156,56 +156,65 @@
                             <div class="partnership_info_wrap">
                                 <h2 style="margin-bottom: 50px;">신규 코스 런칭 이후 주요 사례</h2>
                                 <div class="round-title">
-                                    <span class="num">01</span>
-                                    <p class="title">
-                                        신규오픈 골프장 홍보 극대화
-                                    </p>
-                                    <p class="text">
-                                        신규 오픈 시 월 평균 15만 라운드 이상 노출
-                                    </p>
+                                    <div class="title-wrap">
+                                        <span class="num">01</span>
+                                        <p class="title">
+                                            신규오픈 골프장 홍보 극대화
+                                        </p>
+                                    </div>
+                                    <div class="text-wrap">
+                                        <p class="text">
+                                            신규 오픈 시 월 평균 15만 라운드 이상 노출
+                                        </p>
+                                    </div>
                                 </div>
-                                <div><img src="../../images/sub/img_partnership_info_41.jpg" alt="" /></div>
+                                <div><img src="../../images/sub/img_partnership_info_41.jpg?ver=3" alt="" /></div>
                                 <div class="round-title">
-                                    <span class="num">02</span>
-                                    <p class="title">
-                                        3D 영상 및 이미지 홈페이지 코스소개 활용
-                                    </p>
-                                    <p class="text">
-                                        해비치 제주, 라싸, 스프링데일, 더골프클럽, 소피아그린, 신원 등
-                                    </p>
+                                    <div class="title-wrap">
+                                        <span class="num">02</span>
+                                        <p class="title">
+                                            3D 영상 및 이미지 홈페이지 코스소개 활용
+                                        </p>
+                                    </div>
+                                    <div class="text-wrap">
+                                        <p class="text">
+                                            해비치 제주, 라싸, 스프링데일, 더골프클럽, 소피아그린, 신원 등
+                                        </p>
+                                    </div>
                                 </div>
                                 <div><img src="../../images/sub/img_partnership_info_42.jpg" style="width: 1142px;" alt="" /></div>
                                 <div class="round-title">
-                                    <span class="num">03</span>
-                                    <p class="title">
-                                        사전 골프존에서 연습 후 실제 코스 내장 확대
-                                    </p>
-                                    <p class="text">
-                                        지속적인 내장객 확대와 홍보효과 인증
-                                    </p>
+                                    <div class="title-wrap">
+                                        <span class="num">03</span>
+                                        <p class="title">
+                                            사전 골프존에서 연습 후 실제 코스 내장 확대
+                                        </p>
+                                    </div>
+                                    <div class="text-wrap">
+                                        <p class="text">
+                                            지속적인 내장객 확대와 홍보효과 인증
+                                        </p>
+                                    </div>
                                 </div>
                                 <div><img src="../../images/sub/img_partnership_info_44.png" style="width: 1142px;" alt="" /></div>
                                 <div><img src="../../images/sub/img_partnership_info_43.jpg" style="width: 1142px;" alt="" /></div>
                                 <div class="round-title">
-                                    <span class="num">04</span>
-                                    <p class="title">
-                                        스크린과 공동 프로모션 진행
-                                    </p>
-                                    <p class="text">
-                                        골프장 홍보와 프로모션을 동시에 진행 하여 내장객 전환 유도
-                                    </p>
+                                    <div class="title-wrap">
+                                        <span class="num">04</span>
+                                        <p class="title">
+                                            스크린과 공동 프로모션 진행
+                                        </p>
+                                    </div>
+                                    <div class="text-wrap">
+                                        <p class="text">
+                                            골프장 홍보와 프로모션을 동시에 진행 하여 내장객 전환 유도
+                                        </p>
+                                    </div>
                                 </div>
                                 <div><img src="../../images/sub/img_partnership_info_45.jpg" style="width: 1142px;" alt="" /></div>
                             </div>
                         </div>
-                        <div class="partnership_info_wrap" style="margin-top:150px">
-                            <h2>이벤트/대회 기획을 통해<br />
-                                골프장 홍보 및 필드 라운드까지 연계될 수 있도록<br />
-                                다양한 마케팅 활동을 전개합니다.</h2>
-                            <h3 style="margin-top:130px"><span>사례</span>2020 썸머 골프장 챔피언십</h3>
-                            <p class="sub_text_p">골프장 이용권을 시상품으로 사용하여 대회 참여 후 골프장 내장으로 연계될 수 있도록 이벤트 진행</p>
-                            <div style="margin-top:100px"><img src="../../images/sub/img_partnership_info_6.png" alt="" /></div>
-                        </div>
+                        
                     </div>
                     <div class="customer" style="margin-bottom:0;margin-top:200px">
                         <div class="phone">
@@ -269,43 +278,59 @@
                                     </h2>
                                 </div>
                                 <div class="round-title blue">
-                                    <span class="num">01</span>
-                                    <p class="title">
-                                        신규 코스 홍보 진행
-                                    </p>
-                                    <p class="text">
-                                        라운드 중 노출되는 광고를 통해 골프장 브랜딩 노출 효과 상승 (노출량 : 약 350만 IMP)
-                                    </p>
+                                    <div class="title-wrap">
+                                        <span class="num">01</span>
+                                        <p class="title">
+                                            신규 코스 홍보 진행
+                                        </p>
+                                    </div>
+                                    <div class="text-wrap">
+                                        <p class="text">
+                                            라운드 중 노출되는 광고를 통해 골프장 브랜딩 노출 효과 상승 (노출량 : 약 350만 IMP)
+                                        </p>
+                                    </div>
                                 </div>
                                 <div><img src="../../images/sub/benefit11.jpg" style="width: 1142px;" alt="" /></div>
                                 <div class="round-title blue">
-                                    <span class="num">02</span>
-                                    <p class="title">
-                                        3D 코스 내 홍보물 영역 제공
-                                    </p>
-                                    <p class="text">
-                                        제휴 코스 내 A보드, 오브젝트를 통해 추가로 자사제품 및 프로모션 홍보를 제공
-                                    </p>
+                                    <div class="title-wrap">
+                                        <span class="num">02</span>
+                                        <p class="title">
+                                            3D 코스 내 홍보물 영역 제공
+                                        </p>
+                                    </div>
+                                    <div class="text-wrap">
+                                        <p class="text">
+                                            제휴 코스 내 A보드, 오브젝트를 통해 추가로 자사제품 및 프로모션 홍보를 제공
+                                        </p>
+                                    </div>
                                 </div>
                                 <div><img src="../../images/sub/benefit12.jpg" alt="" /></div>
                                 <div class="round-title blue">
-                                    <span class="num">03</span>
-                                    <p class="title">
-                                        3D 코스 내 홍보물 영역 제공
-                                    </p>
-                                    <p class="text">
-                                        제휴 코스 내 A보드, 오브젝트를 통해 추가로 자사제품 및 프로모션 홍보를 제공
-                                    </p>
+                                    <div class="title-wrap">
+                                        <span class="num">03</span>
+                                        <p class="title">
+                                            골프존 DB 활용 매출 연계
+                                        </p>
+                                    </div>
+                                    <div class="text-wrap">
+                                        <p class="text">
+                                            골프존 440만 DB를 활용한 제휴 골프장 플레이 유저에게 <br>골프장 내장으로 연결 가능한 후킹 툴을 제공
+                                        </p>
+                                    </div>
                                 </div>
                                 <div><img src="../../images/sub/benefit13.jpg" alt="" /></div>
                                 <div class="round-title blue">
-                                    <span class="num">04</span>
-                                    <p class="title">
-                                        골프존의 다양한 매체를 통한 홍보
-                                    </p>
-                                    <p class="text">
-                                        골프존 웹/앱, 스크린 골프 매거진, 스크린 골프존 홍보 등 다양한 매체를 통해 골프장 노출을 제공
-                                    </p>
+                                    <div class="title-wrap">
+                                        <span class="num">04</span>
+                                        <p class="title">
+                                            골프존의 다양한 매체를 통한 홍보
+                                        </p>
+                                    </div>
+                                    <div class="text-wrap">
+                                        <p class="text">
+                                            골프존 웹/앱, 스크린 골프 매거진, 스크린 골프존 홍보 등 다양한 매체를 통해 골프장 노출을 제공
+                                        </p>
+                                    </div>
                                 </div>
                                 <div><img src="../../images/sub/benefit14.jpg" alt="" /></div>
                             </div>
