--- a/m/sub/eventship/championship.html
+++ b/m/sub/eventship/championship.html
@@ -176,7 +176,7 @@
                     <dl>
                         <dt>2</dt>
                         <dd>판매 단가<br />
-                            <span>6천만원 | 대회 1개월 + 홀이동 로딩창<br />이미지 세트 1구좌<br />6천만원 | 폐쇄형 대회<br />
+                            <span>6천만원 | 대회 1개월<br />6천만원 | 폐쇄형 대회<br />
                                 <span style="font-size:12px">(지정된 특정 참여자만 대회 참여 가능)</span></span></dd>
                     </dl>
                     <dl>
