--- a/sub/eventship/championship.html
+++ b/sub/eventship/championship.html
@@ -145,7 +145,7 @@
                             <dl>
                                 <dt>2</dt>
                                 <dd>판매 단가<br />
-                                    <span>6천만원 | 대회 1개월 + 홀이동 로딩창<br />이미지 세트 1구좌<br /><span style="margin-top:10px">6천만원 | 폐쇄형 대회<br />
+                                    <span>6천만원 | 대회 1개월<br /><span style="margin-top:10px">6천만원 | 폐쇄형 대회<br />
                                     <span style="font-size:15px">(지정된 특정 참여자만 대회 참여 가능)</span></span></span>
                                 </dd>
                             </dl>
